--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 
-<p>Am building myself!..Keep calm</p>
+<div class="nota">
+
+<p>Hello i am nota! I wanna be a music player! and spread some luuuuuve!</p>
+
+</div>
+
 
 
 
