--- a/index.html
+++ b/index.html
@@ -11,25 +11,11 @@
 </head>
 <body>
 
-<p>Am building myself!..Keep calm</p>
+<div class="nota">
 
+<p>Hello i am nota! I wanna be a music player! and spread some luuuuuve!</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="javascript/functions.js"></script>
